###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "rules_lua",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.45.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "luarocks",
    build_file = "//lua:luarocks.BUILD.bazel",
    sha256 = "bca6e4ecc02c203e070acdb5f586045d45c078896f6236eb46aa33ccd9b94edb",
    strip_prefix = "luarocks-3.9.2",
    urls = ["https://luarocks.org/releases/luarocks-3.9.2.tar.gz"],
)

lua_toolchains = use_extension("@rules_lua//lua:repositories.bzl", "lua_toolchains")
lua_toolchains.luajit(
    name = "luajit",
    version = "v2.1",
)
use_repo(lua_toolchains, "luajit_toolchains")

register_toolchains("@luajit_toolchains//:x86_64-unknown-linux-gnu_toolchain")

fennel_toolchains = use_extension("@rules_lua//fennel:repositories.bzl", "fennel_toolchains")
fennel_toolchains.fennel(
    name = "fennel",
    version = "1.4.0",
)
use_repo(fennel_toolchains, "fennel_toolchains")

register_toolchains("@fennel_toolchains//:fennel_toolchain")
