module(
    name = "rules_lua_aniseed",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
bazel_dep(name = "rules_lua", version = "0.0.0")
local_path_override(
    module_name = "rules_lua",
    path = "..",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aniseed",
    build_file_content = """
alias(
    name = "aniseed_macros",
    actual = "//fnl/aniseed:aniseed_macros",
    visibility = ["//visibility:public"],
)

load("@rules_lua//fennel:defs.bzl", "aniseed_library")

aniseed_library(
    name = "aniseed",
    srcs = ["//fnl/aniseed"],
    visibility = ["//visibility:public"],
    strip_prefix = "aniseed/fnl",
)
        """,
    patch_args = [
        "-p",
        "1",
    ],
    patches = ["@rules_lua//fennel:0001-Add-build-file.patch"],
    sha256 = "81dd1fe9d61c70999dbb3e56b5b660cf09ed7667a711a744146376ca49fa3b3a",
    strip_prefix = "aniseed-3.31.0",
    url = "https://github.com/Olical/aniseed/archive/refs/tags/v3.31.0.tar.gz",
)

lua_toolchains = use_extension("@rules_lua//lua:repositories.bzl", "lua_toolchains")
lua_toolchains.luajit()
use_repo(lua_toolchains, "luajit_v2.1_toolchains")

register_toolchains("@luajit_v2.1_toolchains//:x86_64-unknown-linux-gnu_toolchain")

#lua_toolchains.lua(version = "v5.1.1")
#
## FIXME: how are you supposed to use names
#use_repo(lua_toolchains, "rules_lua_luaunit_lua_v5.1.1_toolchains")
#
#register_toolchains("@rules_lua_luaunit_lua_v5.1.1_toolchains//:x86_64-unknown-linux-gnu_toolchain")

fennel_toolchains = use_extension("@rules_lua//fennel:repositories.bzl", "fennel_toolchains")
fennel_toolchains.fennel(version = "1.2.1")
use_repo(fennel_toolchains, "fennel_1.2.1_toolchains", "lua_fennel")

register_toolchains("@fennel_1.2.1_toolchains//:fennel_toolchain")
