module(
    name = "rules_lua_busted",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
bazel_dep(name = "rules_lua", version = "0.0.0")
local_path_override(
    module_name = "rules_lua",
    path = "..",
)

lua_deps = use_extension("@rules_lua//lua:defs.bzl", "lua_dependency")
lua_deps.luarocks(
    name = "lua_busted",
    dependency = "busted",
    out_binaries = ["busted"],
    sha256 = "251a848525c743b3ead74d77a125551946fc57ddd20441109d2c9ed912d8ccd4",
    user = "lunarmodules",
    version = "2.1.1-1",
    deps = [
        "@lua_ansicolors",
        "@lua_dkjson",
        "@lua_lua_cliargs",
        "@lua_luafilesystem",
        "@lua_luassert",
        "@lua_luasystem",
        "@lua_mediator",
        "@lua_penlight",
        "@lua_say",
        "@lua_term",
    ],
)
lua_deps.luarocks(
    dependency = "luafilesystem",
    sha256 = "576270a55752894254c2cba0d49d73595d37ec4ea8a75e557fdae7aff80e19cf",
    user = "hisham",
    version = "1.8.0-1",
)
lua_deps.luarocks(
    dependency = "penlight",
    sha256 = "fa028f7057cad49cdb84acdd9fe362f090734329ceca8cc6abb2d95d43b91835",
    user = "tieske",
    version = "1.13.1-1",
    deps = ["@lua_luafilesystem"],
)
lua_deps.luarocks(
    dependency = "luasystem",
    sha256 = "d1c706d48efc7279d33f5ea123acb4d27e2ee93e364bedbe07f2c9c8d0ad3d24",
    user = "olim",
    version = "0.2.1-0",
)
lua_deps.luarocks(
    dependency = "lua_cliargs",
    sha256 = "3c79981292aab72dbfba9eb5c006bb37c5f42ee73d7062b15fdd840c00b70d63",
    user = "amireh",
    version = "3.0-2",
)
lua_deps.luarocks(
    dependency = "say",
    sha256 = "90a1c0253ec38d6628007eef0b424d0707d0f3e0442fce478a627111eb02bb07",
    user = "lunarmodules",
    version = "1.4.1-3",
)
lua_deps.luarocks(
    dependency = "luassert",
    sha256 = "146a7b2ec8e0cadf7dbca6dc993debcd2090e0e4fdf5c632d9f4ec20670357dd",
    user = "lunarmodules",
    version = "1.9.0-1",
)
lua_deps.luarocks(
    dependency = "ansicolors",
    sha256 = "df6126501af3b9b944019164a08aed91377d82e6845c24432769140f12c815d6",
    user = "kikito",
    version = "1.0.2-3",
)
lua_deps.luarocks(
    dependency = "dkjson",
    sha256 = "e4ba15f2a85f84ffc7f628157a4ad16b2b04ba05eb44a2e5956fa46bd104125e",
    user = "dhkolf",
    version = "2.6-1",
)
lua_deps.github(
    name = "lua_term",
    dependency = "lua-term",
    rockspec_path = "lua-term-0.7-1.rockspec",
    tag = "0.07",
    user = "hoelzro",
)
lua_deps.github(
    name = "lua_mediator",
    dependency = "mediator_lua",
    rockspec_path = "mediator_lua-1.1.2-0.rockspec",
    tag = "v1.1.2-0",
    user = "Olivine-Labs",
)
use_repo(
    lua_deps,
    "lua_ansicolors",
    "lua_busted",
    "lua_dkjson",
    "lua_lua_cliargs",
    "lua_luafilesystem",
    "lua_luassert",
    "lua_luasystem",
    "lua_mediator",
    "lua_penlight",
    "lua_say",
    "lua_term",
)
