# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "//lua:defs",
)

stardoc_with_diff_test(
    name = "toolchain",
    bzl_library_target = "//lua:toolchain",
)

stardoc_with_diff_test(
    name = "dependencies",
    bzl_library_target = "//lua:repositories",
)

stardoc_with_diff_test(
    name = "providers",
    bzl_library_target = "//lua:providers",
)

update_docs(name = "update")
