bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_lua", version = "0.0.0")
local_path_override(
    module_name = "rules_lua",
    path = "..",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_lua_luaunit", version = "0.0.0")
local_path_override(
    module_name = "rules_lua_luaunit",
    path = "../luaunit",
)
