bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_lua", version = "0.0.0")
local_path_override(
    module_name = "rules_lua",
    path = "..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_lua_luaunit", version = "0.0.0")
local_path_override(
    module_name = "rules_lua_luaunit",
    path = "../luaunit",
)

bazel_dep(name = "rules_lua_busted", version = "0.0.0")
local_path_override(
    module_name = "rules_lua_busted",
    path = "../busted",
)

lua_deps = use_extension("@rules_lua//lua:defs.bzl", "lua_dependency")
#lua_deps.luarocks(
#    dependency = "luafilesystem",
#    sha256 = "576270a55752894254c2cba0d49d73595d37ec4ea8a75e557fdae7aff80e19cf",
#    user = "hisham",
#    version = "1.8.0-1",
#)
#lua_deps.luarocks(
#    dependency = "stdlib",
#    sha256 = "67eadaccbb2b6037ea70129f9616da49eaeeaf1477652a8e2cc77740286531cf",
#    user = "gvvaughan",
#    version = "41.2.2-1",
#)
#lua_deps.github(
#    dependency = "luasec",
#    tag = "v1.2.0",
#    user = "brunoos",
#    version = "1.2.0-1",
#)
lua_deps.github(
    name = "lua_inspect",
    dependency = "inspect.lua",
    rockspec_path = "rockspecs/inspect-3.1.2-0.rockspec",
    tag = "v3.1.3",
    user = "kikito",
    version = "3.1.3-0",
)
use_repo(lua_deps, "lua_inspect")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "lua_luassert",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_files",
    srcs = glob(["**/*"], exclude=["**/* *"]),
)

load("@rules_lua//lua:defs.bzl", "luarocks_library")

luarocks_library(
    name = "lua_luassert",
    srcrock = "luassert-scm-1.rockspec",
    data = [":all_files"],
)
    """,
    commit = "f14abce580feec35a0279c92118ae7e4c3382789",
    remote = "https://github.com/lunarmodules/luassert.git",
)

lua_toolchains = use_extension("@rules_lua//lua:repositories.bzl", "lua_toolchains")
lua_toolchains.luajit()
use_repo(lua_toolchains, "luajit_v2.1_toolchains")

register_toolchains("@luajit_v2.1_toolchains//:x86_64-unknown-linux-gnu_toolchain")

#lua_toolchains.lua(version = "v5.1.1")
#
## FIXME: how are you supposed to use names
#use_repo(lua_toolchains, "rules_lua_luaunit_lua_v5.1.1_toolchains")
#
#register_toolchains("@rules_lua_luaunit_lua_v5.1.1_toolchains//:x86_64-unknown-linux-gnu_toolchain")

fennel_toolchains = use_extension("@rules_lua//fennel:repositories.bzl", "fennel_toolchains")
fennel_toolchains.fennel(version = "1.2.1")
use_repo(fennel_toolchains, "fennel_1.2.1_toolchains", "lua_fennel")

register_toolchains("@fennel_1.2.1_toolchains//:fennel_toolchain")
