bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_lua", version = "0.0.0")
local_path_override(
    module_name = "rules_lua",
    path = "..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_lua_luaunit", version = "0.0.0")
local_path_override(
    module_name = "rules_lua_luaunit",
    path = "../luaunit",
)

bazel_dep(name = "rules_lua_busted", version = "0.0.0")
local_path_override(
    module_name = "rules_lua_busted",
    path = "../busted",
)

lua_deps = use_extension("@rules_lua//lua:defs.bzl", "lua_dependency")

#lua_deps.luarocks(
#    dependency = "luafilesystem",
#    sha256 = "576270a55752894254c2cba0d49d73595d37ec4ea8a75e557fdae7aff80e19cf",
#    user = "hisham",
#    version = "1.8.0-1",
#)
#lua_deps.luarocks(
#    dependency = "stdlib",
#    sha256 = "67eadaccbb2b6037ea70129f9616da49eaeeaf1477652a8e2cc77740286531cf",
#    user = "gvvaughan",
#    version = "41.2.2-1",
#)
#lua_deps.github(
#    dependency = "luasec",
#    tag = "v1.2.0",
#    user = "brunoos",
#    version = "1.2.0-1",
#)
lua_deps.github(
    name = "lua_inspect",
    dependency = "inspect.lua",
    rockspec_path = "rockspecs/inspect-3.1.2-0.rockspec",
    tag = "v3.1.3",
    user = "kikito",
    version = "3.1.3-0",
)
use_repo(lua_deps, "lua_inspect")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "lua_luassert",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_files",
    srcs = glob(["**/*"], exclude=["**/* *"]),
)

load("@rules_lua//lua:defs.bzl", "luarocks_library")

luarocks_library(
    name = "lua_luassert",
    srcrock = "luassert-scm-1.rockspec",
    data = [":all_files"],
)
    """,
    commit = "f14abce580feec35a0279c92118ae7e4c3382789",
    remote = "https://github.com/lunarmodules/luassert.git",
)
