load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "fennel_library",
    srcs = ["fennel_library.bzl"],
    visibility = ["//fennel:__subpackages__"],
    deps = [
        "//fennel:providers",
        "//fennel:toolchain",
        "//lua:providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "fennel_binary",
    srcs = ["fennel_binary.bzl"],
    visibility = ["//fennel:__subpackages__"],
    deps = [
        ":fennel_library",
        "//fennel:providers",
        "//fennel:toolchain",
        "//lua:providers",
        "//lua/private:lua_binary",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//fennel:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//fennel:__subpackages__"],
)
