load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "lua_binary",
    srcs = ["lua_binary.bzl"],
    visibility = [
        "//fennel:__subpackages__",
        "//lua:__subpackages__",
    ],
    deps = [
        "//lua:providers",
        "@aspect_bazel_lib//lib:paths",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "lua_dependency",
    srcs = ["lua_dependency.bzl"],
    visibility = ["//lua:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/cpp:toolchain_utils.bzl",
    ],
)

exports_files([
    "binary_wrapper.lua",
])

bzl_library(
    name = "lua_library",
    srcs = ["lua_library.bzl"],
    visibility = ["//lua:__subpackages__"],
    deps = ["//lua:providers"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//lua:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//lua:__subpackages__"],
)
