load("@rules_lua//fennel:defs.bzl", "aniseed_library", "aniseed_test")

aniseed_library(
    name = "example",
    srcs = [":example.fnl"],
)

aniseed_test(
    name = "example_test",
    srcs = ["test_example.fnl"],
    deps = [
        ":example",
        "@lua_inspect",
        "@lua_luafilesystem",
        "@lua_luasec",
        "@lua_luassert",
        "@lua_stdlib",
    ],
)
