load("@com_github_michaelboulton_rules_lua//fennel:defs.bzl", "fennel_library", )
load("@rules_lua_luaunit//fennel:defs.bzl", "fennel_luaunit_test")
load("@com_github_michaelboulton_rules_lua//lua:defs.bzl", "lua_binary")

fennel_library(
    name = "example",
    srcs = [":example.fnl"],
)

fennel_luaunit_test(
    name = "example_test",
    srcs = ["test_example.fnl"],
    deps = [":example"],
)
